<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <Button
        android:id="@+id/btn_pindah_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_pindah_activity"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_pindah_dengan_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_pindah_dengan_data"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_pindah_dengan_object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_pindah_dengan_object"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_dial_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_dial_number"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btn_bawa_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_pindah_dengan_membawa_hasil"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tv_hasilnya"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/txt_hasilnya"/>



</androidx.appcompat.widget.LinearLayoutCompat>